--- a/nginx.conf
+++ b/nginx.conf
@@ -5,7 +5,7 @@ http {
         listen 80;
 
         location / {
-            proxy_pass https://node-app-x9q2.onrender.com/;
+            proxy_pass http://node-app-x9q2.onrender.com/;
 
             # Pass original headers (important for logging/debugging)
             proxy_set_header Host $host;
