--- a/nginx.conf
+++ b/nginx.conf
@@ -5,16 +5,15 @@ http {
         listen 80;
 
         location / {
-            proxy_pass http://node-app-x9q2.onrender.com/;
+            proxy_pass https://node-app-x9q2.onrender.com/;
 
-            # Pass original headers (important for logging/debugging)
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
-            # Optional: Disable SSL verification if needed
-            proxy_ssl_verify off;
+            proxy_ssl_server_name on;
+            proxy_ssl_verify off;  # disable SSL cert check, useful for self-signed or internal certs
         }
     }
 }
