--- a/nginx.conf
+++ b/nginx.conf
@@ -7,13 +7,13 @@ http {
         location / {
             proxy_pass https://node-app-x9q2.onrender.com/;
 
-            proxy_set_header Host $host;
+            proxy_set_header Host node-app-x9q2.onrender.com;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
             proxy_ssl_server_name on;
-            proxy_ssl_verify off;  # disable SSL cert check, useful for self-signed or internal certs
+            proxy_ssl_verify off;
         }
     }
 }
